--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "react-datepicker": "^7.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+  "react-router-dom": "^6.0.0"
+  
+    
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
